fixed message with rabbitmq

--- a/codecraft-execution-service/pom.xml
+++ b/codecraft-execution-service/pom.xml
@@ -94,6 +94,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        
+        <!-- Reactor Netty for RabbitMQ STOMP Broker Relay -->
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
+        </dependency>
     </dependencies>
     
     <dependencyManagement>
